
2017-05-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: adjustments of constant value changes

2017-05-28  Ron Norman <rjn@inglenet.com>

	* field.c, typeck.c: check for misplaced operators in constant expressions

2017-05-26  Ron Norman <rjn@inglenet.com>

	Work on constant values:
	* checks for application 78 versus internal 78 and allow internal 78
	  to get handled
	* add constant-01 and constant-78 compile options

2017-05-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	Work on constant values:
	* parser.y, typeck.c, tree.h: tightened syntax checks for NEXT /
	  START OF as 78 VALUE
	* typeck.c: set correct values for NEXT / START OF as 78 VALUE

2017-05-24  Ron Norman <rjn@inglenet.com>

	Work on constant values:
	* parser.y, typeck.c, tree.h: 78/CONSTANT accepts VALUE expression
	* parser.y, typeck.c, tree.h: implemented NEXT / START OF as 78 VALUE
	* ppparse.y, cobc.c, cobc.h: allow define list to be
	  searched outside of ppparse
	* parser.y, typeck.c: implemented CONSTANT FROM

2017-05-21  Ron Norman <rjn@inglenet.com>

	* parser.y: accept ACUCOBOL SET var TO SIZE OF field, handle as
	  MOVE LENGTH OF field TO var

2017-05-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_call): for static calls only generate parameters
	  up to the maximum number of the call, otherwise the static calls
	  cannot be resolved at compile time.
	  Note: currently only done for system library calls, we'd need an
	  external repository for doing this with other calls, too.
	* typeck.c (cb_emit_call): warn if more than the max parameters is
	  used for system library calls
	* typeck.c (cb_list_system): output min/max parameters for system
	  library entries

2017-05-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: bug #373 - level 78 constants: only allow a single value
	  and no optional ARE
	* parser.y: don't check the warning option for cb_warning[_x] twice
