@@ -1,4 +1,11 @@
 
+2017-05-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* pplex.l, ppparse.y: removed undocumented extensions
+	  >> DEFINE CONSTANT (use 01 CONSTANT with/without FROM clause instead)
+	  and the optional AS in $SET CONSTANT VAR AS VAL - as MF doesn't allow
+	  the AS at all
+
 2017-05-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y, typeck.c: adjustments of constant value changes
